@@ -3,7 +3,6 @@ package com.dmdirc.ktirc
 import com.dmdirc.irctest.IrcLibraryTests
 import com.dmdirc.ktirc.model.Profile
 import com.dmdirc.ktirc.model.Server
-import kotlinx.coroutines.delay
 import kotlinx.coroutines.runBlocking
 import org.junit.jupiter.api.TestFactory
 
@@ -21,9 +20,7 @@ class KtIrcIntegrationTest {
 
         override fun terminate() {
             runBlocking {
-                delay(100)
                 ircClient.disconnect()
-                ircClient.join()
             }
         }
 
